--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-scrollbars-custom": "^4.1.1"
   },
   "devDependencies": {
